# 24-game-grpo

./: .gitignore  README.md  pyproject.toml
configs/: data.example.yaml  grpo.base_hard.yaml  grpo.base_soft.yaml  grpo.example.yaml  grpo.pilot.yaml  grpo.solver_sft4_uns50_hard_200.yaml  grpo.solver_sft4_uns50_hard_300.yaml  grpo.solver_sft_2epoch_uns100_hard_100.yaml  grpo.solver_sft_hard.yaml  grpo.solver_sft_soft.yaml  sft.fixed.yaml  sft.solver.yaml  sft.solver_2epoch_uns100.yaml  sft.solver_3epoch_uns50_r64_lr5e5.yaml  sft.solver_4epoch_uns100_r64_lr5e5.yaml  sft.solver_4epoch_uns50_r64_lr5e5.yaml
configs/archive/: data.easy50_strict.yaml  data.no_solution.yaml  grpo.easy50_format_strict.yaml  grpo.easy50_hard_exact.yaml  grpo.easy50_proximity.yaml  grpo.exact_heavy.yaml  grpo.exact_proximity.yaml  grpo.example.yaml  grpo.pilot.yaml  grpo.sft_easy1000_uns100_format_strict.yaml  grpo.sft_easy1000_uns100_hard_exact.yaml  grpo.sft_easy1000_uns100_hard_exact_g4.yaml  grpo.sft_easy1000_uns100_soft_g4.yaml  grpo.sft_easy1000_uns100_soft_g8.yaml  grpo.sft_easy1000_uns100_soft_g8_fp16.yaml  grpo.sft_easy1000_uns100_soft_g8_l32.yaml  grpo.sft_easy1000_uns100_soft_g8_l48.yaml  grpo.sft_easy50_refine.yaml  sft.easy1000.yaml  sft.easy1000_unsolvable100.yaml  sft.easy200.yaml  sft.easy200_overfit.yaml  sft.easy50.yaml  sft.easy50_overfit.yaml
data/processed/: eval.jsonl  train.jsonl  unsolvable_eval.jsonl
scripts/: train_grpo.sh
snapshots/easy100_sft4_uns50_chain/: 20260630_230321_easy100_sft4_uns50_r64_lr5e5_bestof1.json  20260630_230924_easy100_sft4_uns50_r64_lr5e5_bestof8_t07.json  20260701_001327_easy100_sft4_uns50_hard_grpo100_bestof1.json  20260701_001858_easy100_sft4_uns50_hard_grpo100_bestof8_t07.json  (+6 more)
tests/: test_build_data.py  test_build_sft_data.py  test_rewards.py  test_solver.py  test_verifier.py
(+15 files in other folders)
