[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "game24-grpo"
version = "0.1.0"
description = "GRPO training scaffold for the 24-game task"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "datasets",
  "peft",
  "huggingface-hub",
  "pyyaml",
  "sympy",
  "torch>=2.0.0",
  "transformers",
  "trl",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
]

[project.scripts]
game24-build-data = "game24_grpo.cli.build_data:main"
game24-eval = "game24_grpo.cli.evaluate:main"
game24-train = "game24_grpo.cli.train_grpo:main"
game24-build-sft = "game24_grpo.cli.build_sft_data:main"
game24-train-sft = "game24_grpo.cli.train_sft:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
